# riesgo-deslizamientos-mlops

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.agents/skills/video-shorts/: SKILL.md
.github/workflows/: ci.yml
configs/: antioquia_deslizamientos.yaml
data/processed/: best_params.json  config_snapshot_v2.yaml
docs/: pitch_presentacion.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: cuencas_antioquia.geojson  impacto.json  predicciones_semana_actual.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  health.ts  metadata.ts  predict.ts
frontend/src/components/charts/: RiskGauge.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/map/: RiskMap.tsx
frontend/src/components/ui/: KpiCard.tsx  RiskBadge.tsx
frontend/src/pages/: ImpactoEconomico.tsx  MapaRiesgo.tsx  Modelo.tsx  Monitoring.tsx  Prediccion.tsx  Prioridades.tsx
frontend/src/types/: index.ts
notebooks/: 00_experimento_correlacion.ipynb  01_antioquia_deslizamientos_scope.ipynb  02_experiment_tracking.ipynb  03_pipeline_v3_cuencas.ipynb  04_hyperparameter_tuning.ipynb  05_impacto_economico.ipynb
pipelines/: data_flow.py  deploy.py  deploy_prediction.py  prediction_flow.py  training_flow.py
reports/: TerraAlert_v2.html  informe_proyecto.md
scripts/: _gen_figuras_5_6.py  build_grid_v3.py  convert_gpkg_to_geojson.py  create_short_video.py  diagnostico_auc.py
src/experiment/: config.py  download.py  evaluate.py  process.py  registry.py  spatial.py  train.py
src/experiment/api/: dependencies.py  main.py  routes.py  schemas.py
src/experiment/monitoring/: drift.py  logger.py
tests/unit/: test_api.py  test_evaluate.py  test_process.py
