[project]
name = "riesgo-deslizamientos-mlops"
version = "0.1.0"
description = "Experimento de correlacion precipitacion-deslizamientos Colombia"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "requests>=2.31",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbformat>=5.9",
    "pydantic>=2.13.3",
    "mlflow>=3.11.1",
    "rasterio>=1.3",
    "cdsapi>=0.7",
    "xarray>=2023.0",
    "netCDF4>=1.6",
    "pulearn>=0.0.3",
    "geopandas>=0.14",
]
