[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experiment"]

[project]
name = "riesgo-deslizamientos-mlops"
version = "0.1.0"
description = "Experimento de correlacion precipitacion-deslizamientos Colombia"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "requests>=2.31",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbformat>=5.9",
    "pydantic>=2.13.3",
    "mlflow>=3.11.1",
    "rasterio>=1.3",
    "cdsapi>=0.7",
    "xarray>=2023.0",
    "netCDF4>=1.6",
    "pulearn>=0.0.3",
    "geopandas>=0.14",
    "prefect>=3.7.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
exclude = ["notebooks/", ".venv/", "docs/"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"pipelines/*.py" = ["E402"]
"scripts/*.py" = ["E402", "F401", "F541"]
